# h2incc

./: .editorconfig  CMakeLists.txt  COPYING  README.md  h2incc.ini
.github/workflows/: workflow.yml
cmake/: h2incc-commands.cmake  h2incc-config.cmake.in
cmake/toolchains/: mingw-common.cmake  mingw32.cmake  mingw64.cmake
source/: h2incc.c  h2incc.h  incfile.c  incfile.h  list.c  list.h  util.h  vector.c  vector.h
test/: CMakeLists.txt  a.h  comments.h  comments.h.ref  driver.py  enum_anon_noval.h  extern_double.h  extern_double.h.ref  extern_float.h  extern_funcptr.h  extern_funcptr.h.ref  extern_int.h  extern_int.h.ref  extern_intarray.h  extern_intarray.h.ref  extern_intptr.h  extern_unsigned.h  extern_unsigned.h.ref  function_int.h  include_local.h  include_local.h.ref  macro_define_char_rbracket.h  macro_define_int_decimal.h  macro_define_int_decimal.h.ref  macro_define_int_hexadecimal.h  macro_define_int_octal.h  macro_define_string.h  macro_define_string_backspace.h  macro_define_string_backspace.h.ref  macro_define_string_bell.h  macro_define_string_formfeed.h  macro_define_string_htab.h  macro_define_string_htab.h.ref  macro_define_string_newline.h  macro_define_string_specchars.h  macro_define_string_vtab.h  macro_define_strings.h  macro_function.h  macro_function_enum.h  macro_function_enum.h.ref  (+31 more)
test/comments/: comments.h  comments.ref
test/empty/: empty.h  empty.ref
test/empty_block_comment_only/: empty_block_comment.ref  empty_block_comment_only.desc  empty_block_comment_only.h
test/enum_anon_noval/: enum_anon_noval.h  enum_anon_noval.ref
test/enum_anon_val_hex/: enum_anon_val.ref  enum_anon_val_hex.h
test/extern_c/: extern_c.h  extern_c.ref
test/extern_double/: extern_double.h
test/extern_float/: extern_float.h  extern_float.ref
test/extern_funcptr/: extern_funcptr.h  extern_funcptr.ref
test/extern_int/: extern_int.h
test/extern_intarray/: extern_intarray.h
test/extern_intptr/: extern_intptr.h  extern_intptr.ref
test/extern_struct/: extern_struct.h  extern_struct.ref
test/extern_unsigned/: extern_unsigned.h
test/function_int/: function_int.h  function_int.ref
test/function_variadic/: function_variadic.h  function_variadic.ref
test/function_void/: function_void.h
test/include_local/: include_local.h  include_local.ref
test/include_struct/: include_struct.h  include_struct.ref  local.h
test/macro_define_c_commands/: macro_define_c_commands.h  macro_define_c_commands.ref
test/macro_define_char_rbracket/: macro_define_char_rbracket.h  macro_define_char_rbracket.ref
test/macro_define_int_decimal/: macro_define_int_decimal.h  macro_define_int_decimal.ref
test/macro_define_int_hexadecimal/: macro_define_int_hexadecimal.h  macro_define_int_hexadecimal.ref
test/macro_define_int_octal/: macro_define_int_octal.h  macro_define_int_octal.ref
test/macro_define_string/: macro_define_string.h  macro_define_string.ref
test/macro_define_string_backspace/: macro_define_string_backspace.h  macro_define_string_backspace.ref
test/macro_define_string_bell/: macro_define_string_bell.h  macro_define_string_bell.ref
test/macro_define_string_formfeed/: macro_define_string_formfeed.h  macro_define_string_formfeed.ref
test/macro_define_string_htab/: macro_define_string_htab.h  macro_define_string_htab.ref
test/macro_define_string_newline/: macro_define_string_newline.h  macro_define_string_newline.ref
test/macro_define_string_specchars/: macro_define_string_specchars.h  macro_define_string_specchars.ref
test/macro_define_string_vtab/: macro_define_string_vtab.h  macro_define_string_vtab.ref
test/macro_define_strings/: macro_define_strings.h  macro_define_strings.ref
test/macro_function/: macro_function.h  macro_function.ref
test/macro_function_append/: macro_function_append.h  macro_function_append.ref
test/macro_function_enum/: macro_function_enum.h  macro_function_enum.ref
test/macro_function_enum_multiline/: macro_function_enum_multiline.h  macro_function_enum_multiline.ref
test/macro_ifdef/: macro_ifdef.h  macro_ifdef.ref
test/macro_ifnot/: macro_ifnot.h  macro_ifnot.ref
test/struct/: struct.h
test/struct_char/: struct_char.h  struct_char.ref
test/struct_charp/: struct_charp.h  struct_charp.ref
test/struct_conditional_member/: struct_conditional_member.h  struct_conditional_member.ref
test/struct_embedded/: struct_embedded.h  struct_embedded.ref
test/struct_funcptr/: struct_funcptr.h  struct_funcptr.ref
test/struct_int/: struct_int.h  struct_int.ref
test/struct_intarray/: struct_intarray.h  struct_intarray.ref
test/struct_intptr_32bit/: struct_intptr_32bit.h  struct_intptr_32bit.ref
test/struct_intptr_64bit/: struct_intptr_64bit.h  struct_intptr_64bit.ref
test/struct_member_protected_word/: struct_member_protected_word.h  struct_member_protected_word.ref
test/struct_short/: struct_short.h  struct_short.ref
test/struct_typedef/: struct_typedef.h  struct_typedef.ref
test/typedef_enum/: typedef_enum.h
test/typedef_enum_char_lbracket/: typedef_enum_char_lbracket.h
test/typedef_enum_char_rbracket/: typedef_enum_char_rbracket.h
test/typedef_enum_int/: typedef_enum_int.h
test/typedef_function/: typedef_function.h  typedef_function.ref
test/typedef_function_pointer/: typedef_function_pointer.h  typedef_function_pointer.ref
test/typedef_struct/: typedef_struct.h  typedef_struct.ref
test/union_simple/: union_simple.h  union_simple.ref
test/voidfunction/: voidfunction.h  voidfunction.ref
